# axum-ca-http-service-template

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml
migrations/: 20231217000001_create_messages_table.sql
src/: main.rs
src/application/use_cases/: health_check.rs  mod.rs  send_message.rs
src/domain/entities/: message.rs
src/domain/repositories/: message_repository.rs  mod.rs
src/domain/services/: mod.rs  pubsub_service.rs
src/infrastructure/: config.rs  mod.rs  postgres.rs  redis_pubsub.rs
src/presentation/: routes.rs
src/presentation/handlers/: health.rs  mod.rs  websocket.rs
