[package]
name = "tokio-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.7", features = ["ws"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "uuid"] }
redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["trace"] }
dotenv = "0.15.0"
async-trait = "0.1.89"
futures = "0.3"
